creditcard and voucher pin changes

--- a/app/views/clients/editcarddetails.html
+++ b/app/views/clients/editcarddetails.html
@@ -82,6 +82,20 @@
 	  </tr>
 	  <tr>
         <td>
+		<div class="control-group">
+			<label class="control-label" for="name">{{'label.client.creditcard.cardnumber' | translate}}<span class="required">*</span></label>
+			<div class="controls">
+				<input id="cardNumber" type="text" name="cardNumber" ng-model="formData.crdNumber" 
+				ng-focus="cradNumberErrorHide()" ng-change="selectCardType(formData.cardNumber)" required late-Validate/>
+				<!-- <span class="error" ng-show="cardNumberReq">This field is required.</span> -->
+				<span class="error" ng-show="cardNumberDigit">Please enter only digits.</span>
+				<span class="error" ng-show="cardNumberValid">Please enter a valid credit card number.</span>
+			</div>
+		</div>
+	   </td>
+	  </tr>
+	   <tr>
+        <td>
 		 <div class="control-group">
 				<label class="control-label" for="name">{{'label.client.creditcard.cardType' | translate}}<span class="required">*</span></label>
 				<div class="controls">
@@ -91,19 +105,6 @@
 				</div>
 		 </div>
 		</td>
-	  </tr>
-	  <tr>
-        <td>
-		<div class="control-group">
-			<label class="control-label" for="name">{{'label.client.creditcard.cardnumber' | translate}}<span class="required">*</span></label>
-			<div class="controls">
-				<input id="cardNumber" type="text" name="cardNumber" ng-model="formData.crdNumber" ng-focus="cradNumberErrorHide()" required late-Validate/>
-				<!-- <span class="error" ng-show="cardNumberReq">This field is required.</span> -->
-				<span class="error" ng-show="cardNumberDigit">Please enter only digits.</span>
-				<span class="error" ng-show="cardNumberValid">Please enter a valid credit card number.</span>
-			</div>
-		</div>
-	   </td>
 	  </tr>
 	  <tr>
         <td>
