--- a/app/views/organization/voucherpins.html
+++ b/app/views/organization/voucherpins.html
@@ -42,9 +42,10 @@
                 <td>{{voucherpin.pinType}}</td>        
                 <td>{{voucherpin.pinValue}}</td>  
                 <td>{{voucherpin.expiryDate|DateFormat}}</td> 
-                <td><a ng-show="(voucherpin.isProcessed == 'N')&&(!processFileLoading)" ng-click="processFile(voucherpin.id)" popover="Process File" popover-trigger="mouseenter"><i class="icon-play icon-white"></i></a>            
+                <td><a ng-show="(voucherpin.isProcessed == 'N')&&((voucherpin.id)!=dynamicVar)&&(PermissionService.showMenu('PROCESS_RANDAMGENERATOR'))" 
+                		 ng-click="processFile(voucherpin.id)" popover="Process File" popover-trigger="mouseenter"><i class="icon-play icon-white"></i></a>      
                    <a  ng-show="voucherpin.isProcessed == 'Y'" ng-click="downloadFile(voucherpin.id)" popover="Download Voucher File" popover-trigger="mouseenter"><i class="icon-cloud-download"></i></a>
-                   <img alt="Loading"  ng-src="./images/spinner.gif" width="30" height="30" ng-show="processFileLoading&&(voucherpin.isProcessed == 'N')">
+                   <img alt="Loading"  ng-src="./images/spinner.gif" width="30" height="30" ng-show="((voucherpin.id)==dynamicVar)&&(voucherpin.isProcessed == 'N')">
                 </td>  
             </tr>
         </tbody>
