--- a/app/views/clients/addcreditcarddetails.html
+++ b/app/views/clients/addcreditcarddetails.html
@@ -79,7 +79,7 @@
 			<label class="control-label" for="name">{{'label.client.creditcard.cardnumber' | translate}}<span class="required">*</span></label>
 			<div class="controls">
 				<input type="text" id="cardNumber" name="cardNumber" ng-model="formData.cardNumber" 
-				    ng-focus="cradNumberErrorHide()" ng-change="selectCardType(formDara.cardNumber)" required late-Validate/>
+				    ng-focus="cradNumberErrorHide()" ng-change="selectCardType(formData.cardNumber)" required late-Validate/>
 				<!-- <span class="error" ng-show="cardNumberReq">This field is required.</span> -->
 				<span class="error" ng-show="cardNumberDigit">Please enter only digits.</span>
 				<span class="error" ng-show="cardNumberValid">Please enter a valid credit card number.</span>
@@ -119,7 +119,7 @@
 					<label class="control-label" for="name">{{'label.client.creditcard.cvvNumber' | translate}}<span class="required">*</span></label>
 					<div class="controls">
 						 <input type="text" id="cardCvvNo" maxlength="3" class="input-small" name="cardCvvNo" 
-								 ng-focus="cardCvvNoErrorHide()" ng-model="formData.cvvNumber" />
+								 ng-focus="cardCvvNoErrorHide()" ng-model="formData.cvvNumber"/>
 						<!--  <span class="error" ng-show="cardCvvNoReq">This field is required.</span> -->
 						<span class="error" ng-show="cardCvvNoDigit">Please enter only digits.</span>
 					</div>
