--- a/app/views/private/home_superuser.html
+++ b/app/views/private/home_superuser.html
@@ -25,9 +25,10 @@
                 </panelbig>
             </div>
         </div>
+
         <div class="row">
             <div class="span6 paddedleft90">
-                <panel title="Amount Collected for Today ({{cOfficeName}}) " >
+                <panel title="Amount Collected for Current Month ({{cOfficeName}}) " >
                     <h3 class="required panel-error" data-ng-show="showCollectionerror">No Data Available</h3>
                     <div data-ng-show="!showCollectionerror" style="margin-left:5px;margin-top:-20px;">
                         <nvd3-pie-chart
@@ -44,13 +45,13 @@
                              <svg height="230"></svg>
                         </nvd3-pie-chart>
                     </div>
-                    <select class="input-small-tooltip pull-right" name="office1" ng-change="getCollectionOffice()" id="office1" ng-model="officeIdCollection" data-ng-options="office.id as office.name for office in offices" value="{{office.id}}">
+                    <select class="input-small-tooltip pull-right" name="office11" ng-change="getCollectionOffice()" id="office11" ng-model="officeId" data-ng-options="office.id as office.name for office in offices" value="{{office.id}}">
                         <option value="">--Office--</option>
                     </select>
                 </panel>
             </div>
             <div class="span6 paddedleft">
-                <panel title="Stock Item Details for Today ({{dOfficeName}})" >
+                <panel title="Stock Item Details for Current Month ({{sOfficeName}})" >
                     <h3 class="required panel-error" data-ng-show="showDisbursementerror">No Data Available</h3>
                     <div data-ng-show="!showDisbursementerror" style="margin-left:5px;margin-top:-15px;">
                         <nvd3-pie-chart
@@ -67,10 +68,45 @@
                             <svg height="230"></svg>
                         </nvd3-pie-chart>
                     </div>
-                    <select class="input-small-tooltip pull-right" data-ng-options="office.id as office.name for office in offices" name="office2" data-ng-change="getDisbursementOffice()" value="{{office.id}}" id="office2" ng-model="officeIdDisbursed">
+                    <select class="input-small-tooltip pull-right" data-ng-options="office.id as office.name for office in offices" name="office2" data-ng-change="getStock()" value="{{office.id}}" id="office2" ng-model="officeId">
+                        <option value="">--Office--</option>
+                    </select>
+                </panel>
+            </div>
+	   </div>
+
+
+
+
+
+
+        <div class="row">
+            <div class="span6 paddedleft90">
+                <panel title="Cumulative Customers as on Today ({{dOfficeName}}) " >
+                    <h3 class="required panel-error" data-ng-show="showCumCustomerDataerror">No Data Available</h3>
+                    <div data-ng-show="!showCumCustomerDataerror" style="margin-left:5px;margin-top:-15px;">
+                        <nvd3-pie-chart
+                                data="cumCustomerData"
+                                id="piechart3"
+                                width="380"
+                                height="370"
+                                x="xFunction()"
+                                y="yFunction()"
+                                tooltips="true"
+                                donut="true"
+                                donutRatio=".015"
+                                color="colorFunctionPie()">
+                             <svg height="230"></svg>
+                        </nvd3-pie-chart>
+                    </div>
+                    <select class="input-small-tooltip pull-right" name="office3" ng-change="getCumOffice()" id="office3" ng-model="officeId" data-ng-options="office.id as office.name for office in offices" value="{{office.id}}">
                         <option value="">--Office--</option>
                     </select>
                 </panel>
             </div>
          </div>
+
     </div>
+
+
+
