--- a/app/views/system/mappingconfiguration.html
+++ b/app/views/system/mappingconfiguration.html
@@ -137,6 +137,45 @@
       
          </div>
       </tab>
+	<tab heading="Currency Configuration" select="getCurrencyConfig()"
+	ng-show="$parent.PermissionService.showMenu('READ_CURRENCY')">
+        <div class="pull-right btn-group">
+         <a ng-show="PermissionService.showMenu('UPDATE_CURRENCY')" ng-click="hideview = !hideview" class="btn btn-primary"><i class="icon-plus icon-white"></i> Edit</a>
+        </div>
+        <div class="row-fluid">
+                   <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
+                   
+        <table class="table">
+            <thead>
+              <tr class="graybg">
+                <th>Currency Name</th>
+	            <th>Currency Code</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="currency in selectedCurrOptions  | filter:filterText">
+              <td>{{currency.name}}</td>
+	           <td>{{currency.code}}</td>
+     		 </tbody>
+          </table>
+       <div ng-show="hideview">
+            <br>
+        	<input class="form-control input-xxlarge" 
+             ng-model="selected" 
+             placeholder="New Currency"
+             type="text"
+             typeahead="item as item.displayLabel for item in allCurrOptions | filter:$viewValue | limitTo:8" />&nbsp;&nbsp;<a ng-click='addCur()'><i class="icon-plus"></i></a>
+
+         	<div ng-repeat="currency in selectedCurrOptions">
+    			<input disabled="" class="form-control input-xxlarge" placeholder={{currency.displayLabel}}} type="text"/>&nbsp;&nbsp;<a ng-click='deleteCur(currency.code)'><i class="icon-remove"></i></a>
+            </div>
+            <div class="offset5">
+                <button id="cancel" type="reset" ng-click="cancel()" class="btn">Cancel</button>
+                <button id="submit" type="submit" ng-click="submit()" class="btn btn-primary">Save</button>
+            </div>
+        </div>  
+         </div>
+      </tab>
 	
     </tabset>
     </div>
