--- a/app/views/system/mappingconfiguration.html
+++ b/app/views/system/mappingconfiguration.html
@@ -140,7 +140,7 @@
 	<tab heading="Currency Configuration" select="getCurrencyConfig()"
 	ng-show="$parent.PermissionService.showMenu('READ_CURRENCY')">
         <div class="pull-right btn-group">
-         <a ng-show="PermissionService.showMenu('UPDATE_CURRENCY')" ng-click="hideview = !hideview" class="btn btn-primary"><i class="icon-plus icon-white"></i> Edit</a>
+         <a ng-show="PermissionService.showMenu('UPDATE_CURRENCY')" href="#/createCurrencyMapping" class="btn btn-primary"><i class="icon-plus icon-white"></i> Edit</a>
         </div>
         <div class="row-fluid">
                    <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by name">
