html file added for about obs label

--- a/app/views/administration/system.html
+++ b/app/views/administration/system.html
@@ -20,8 +20,8 @@
 				<p class="list-group-item-text">Audit logs of all the activities, such as create client, disburse loans etc</p>
 			</a>
 			</a>
-				<a class="list-group-item">
-				<h4 class="list-group-item-heading"><i class="icon-large icon-list-alt"></i>&nbsp;&nbsp;About Me</h4>
+				<a class="list-group-item" href="#/aboutobs">
+				<h4 class="list-group-item-heading"><i class="icon-large icon-list-alt"></i>&nbsp;&nbsp;About OBS</h4>
 				<p class="list-group-item-text">Version / Release with features supported</p>
 			</a>
 		</div>
