--- a/app/views/administration/organization.html
+++ b/app/views/administration/organization.html
@@ -3,7 +3,7 @@
 	  <div class="list-group">
 	    <a class="list-group-item" href="#/offices" ng-show="PermissionService.showMenu('READ_OFFICE')">
 	      <h4 class="list-group-item-heading"><i class="icon-building icon-large"></i>&nbsp;&nbsp;Manage Offices</h4>
-	      <p class="list-group-item-text">Add new office or modify or inactivate office or modify office heirarchy</p>
+	      <p class="list-group-item-text">Add or Modify or Inactivate Office or Modify Hierarchy </p>
 	    </a>
 	    <a class="list-group-item" href="#/employees" ng-show="PermissionService.showMenu('READ_STAFF')">
 	      <h4 class="list-group-item-heading"><i class="icon-user icon-large"></i>&nbsp;&nbsp;Manage Employees</h4>
