--- a/app/views/administration/system.html
+++ b/app/views/administration/system.html
@@ -17,7 +17,7 @@
 			</a>
 				<a class="list-group-item" href="#/audit" ng-show="PermissionService.showMenu('read_Audit')">
 				<h4 class="list-group-item-heading"><i class="icon-large icon-list-alt"></i>&nbsp;&nbsp;Audit Trails</h4>
-				<p class="list-group-item-text">Audit logs of all the activities, such as create client, disburse loans etc</p>
+				<p class="list-group-item-text">Audit logs of all activities such as Client, Orders etc</p>
 			</a>
 			</a>
 				<a class="list-group-item" href="#/about">
