--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -1293,7 +1293,7 @@
                     </div>
                     <div class="modal-footer">
                         <button id="cancel" class="btn btn-warning" ng-click="rejectStatement()">{{'button.cancel' | translate}}</button>
-                        <button id="submit" class="btn btn-primary" ng-click="acceptStatement()" ng-disabled="flagStatementPop">{{'label.confirm' | translate}}</button>
+                        <button id="submit" class="btn btn-primary" ng-click="acceptStatement()">{{'label.confirm' | translate}}</button>
                     </div>
       </script>
             <script type="text/ng-template" id="cancelpayment.html">
