--- a/app/views/clients/createactivation.html
+++ b/app/views/clients/createactivation.html
@@ -117,7 +117,7 @@
                </div>
              </td>
              </tr>
-             <td>
+             <td ng-show="config == 'SALE'">
              	<div class="control-group">
             		<label class="control-label" for="discountId">{{ 'label.discountCode' | translate }}</label>
             		   <div class="controls">
