--- a/app/views/clients/editProvisioning.html
+++ b/app/views/clients/editProvisioning.html
@@ -117,7 +117,7 @@
             </tr>
           </table>
           <div class="offset3">
-            <a id="cancel" href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">Cancel</button></a>
+              <a href='#/viewclient/{{clientId}}' class="btn">Cancel</a>
             <button id="submit" type="submit" class="btn btn-primary">Save</button>
           </div>
         </fieldset>
