--- a/app/views/clients/createprovisioning.html
+++ b/app/views/clients/createprovisioning.html
@@ -91,6 +91,18 @@
 	</div>			
 	</div>
 			    <table>
+					<tr>
+					<td>
+			 			 <div class="control-group">
+			 			  	<div class="controls">
+
+						  	<input  id="ip_address" type="radio" name="selectType"  ng-click="selectedIPAddress()" checked/>&nbsp;&nbsp;IPAddress
+			  				<input  id="subnet" type="radio" name="selectType" ng-click="selectedSubnet()" />&nbsp;&nbsp;Subnet&nbsp;&nbsp;
+
+						  	</div>
+						  	</div>
+			 			 </td>
+					</tr>
 		              <tr>
 					       <td>
 							 <div class="control-group">
@@ -141,7 +153,7 @@
           						</div>
 							</td> -->
 							<td>
-								<div class="control-group" ng-show="parameterData.paramName == 'IP_ADDRESS'">
+								<div class="control-group" ng-show="(parameterData.paramName == 'IP_ADDRESS')&&IPAddress">
             					<label class="control-label" for="ipAddress">{{ 'label.provisioning.ipaddress' | translate }}</label>
             					<div class="controls">                                  	       
              					 <input type="text" ng-model="formData.ipAddress" name="ipAddress" ng-change="getData(formData.ipAddress)"  typeahead="ipPoolData as ipPoolData for ipPoolData in ipPoolDatasData | filter:$viewValue" typeahead-min-length="0">  
@@ -152,6 +164,17 @@
 						              </div>                            
                                   </div>                           
             					</div>                                                               
+							</td>
+							</tr>
+							<tr>
+							<td >
+								<div class="control-group" ng-show="(parameterData.paramName == 'IP_ADDRESS')&&subnet">
+            					<label class="control-label" >{{ 'label.provisioning.subnetIP' | translate }}</label>
+            					<div class="controls">
+              					 <input type="text" ng-model="formData.subnetIPAddress" ng-change="getData(formData.subnetIPAddress)"  typeahead="ipPoolData as ipPoolData for ipPoolData in ipPoolDatasData | filter:$viewValue" typeahead-min-length="0"/>
+              					 <input type="text" style="width:20px;" id="subnet" ng-model="formData.subnet" maxlength="2"/>
+            					</div>
+          						</div>
 							</td>
 							</tr>
 							<tr>
