--- a/app/views/clients/createprovisioning.html
+++ b/app/views/clients/createprovisioning.html
@@ -96,8 +96,8 @@
 			 			 <div class="control-group">
 			 			  	<div class="controls">
 
-						  	<input  id="ip_address" type="radio" name="selectType"  ng-click="selectedIPAddress()" checked/>&nbsp;&nbsp;IPAddress
-			  				<input  id="subnet" type="radio" name="selectType" ng-click="selectedSubnet()" />&nbsp;&nbsp;Subnet&nbsp;&nbsp;
+						  	<input  id="ip_address" type="radio" name="selectType"  ng-click="selectedIPAddress('ipAddress')" checked/>&nbsp;&nbsp;IPAddress
+			  				<input  id="subnet" type="radio" name="selectType" ng-click="selectedSubnet('subnet')" />&nbsp;&nbsp;Subnet&nbsp;&nbsp;
 
 						  	</div>
 						  	</div>
